[gd_scene format=3 uid="uid://bchs8um1bxxbh"]

[ext_resource type="Script" uid="uid://c2w1uafphli8s" path="res://scripts/ui/hud.gd" id="1_0mwgc"]
[ext_resource type="Script" uid="uid://g11x0unwsuxg" path="res://scripts/npcs/dialog_layer.gd" id="2_hqnrr"]
[ext_resource type="Texture2D" uid="uid://dttm5re2k76uw" path="res://assets/textures/backgrund.png" id="2_oj5la"]
[ext_resource type="Script" uid="uid://bbt2f2m01ffn2" path="res://addons/virtual_joystick/virtual_joystick.gd" id="3_136eg"]
[ext_resource type="Texture2D" uid="uid://dlovdqua02ufe" path="res://addons/virtual_joystick/resources/textures/joystick_texture_2.png" id="4_136eg"]
[ext_resource type="Texture2D" uid="uid://h4fgt60qc6us" path="res://addons/virtual_joystick/resources/textures/stick_texture_2.png" id="5_oj5la"]

[node name="HUD" type="CanvasLayer" unique_id=282475024]
script = ExtResource("1_0mwgc")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=807631905]
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0

[node name="PhaseLabel" type="Label" parent="VBoxContainer" unique_id=247261998]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "JOUR 1"

[node name="DebugButton" type="Button" parent="VBoxContainer" unique_id=184318949]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Passer NUIT/JOUR (DEBUG)"

[node name="TimerLabel" type="Label" parent="VBoxContainer" unique_id=1785767576]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.75686276, 0.02745098, 1)
theme_override_font_sizes/font_size = 20
text = "Temps: --:--"

[node name="PlayerStatsLabel" type="Label" parent="VBoxContainer" unique_id=531388727]
layout_mode = 2
theme_override_colors/font_color = Color(0.4708926, 0.9834097, 0.34041822, 1)
theme_override_font_sizes/font_size = 20
text = "HP: 100/100"

[node name="EnemyCountLabel" type="Label" parent="VBoxContainer" unique_id=758589528]
modulate = Color(1, 0.53333336, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Ennemis: 0/8"

[node name="TransitionOverlay" type="TextureRect" parent="." unique_id=1983690563]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 384.0
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("2_oj5la")

[node name="TransitionLabel" type="Label" parent="." unique_id=691195398]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -11.5
offset_right = 48.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.45, 0.45, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 48
text = "TRANSITION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogLayer" type="CanvasLayer" parent="." unique_id=295762571 groups=["dialog_layer"]]
script = ExtResource("2_hqnrr")

[node name="DialogBox" type="Panel" parent="DialogLayer" unique_id=1528363263]
anchors_preset = -1
anchor_top = -0.08179013
anchor_right = 0.9626736
anchor_bottom = 0.17438272
offset_left = 2.0
offset_top = 491.0
offset_right = 42.0
offset_bottom = 531.0
metadata/_edit_use_anchors_ = true

[node name="DialogLabel" type="Label" parent="DialogLayer/DialogBox" unique_id=1142965695]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Bonjour, je m'appelle Aline. Tu veux savoir qui sont les traitres ?"

[node name="CloseButton" type="Button" parent="DialogLayer/DialogBox" unique_id=1634781578]
layout_mode = 0
offset_left = 1022.0
offset_top = 59.0
offset_right = 1082.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 14
text = "Fermer"

[node name="Reponse1Button" type="Button" parent="DialogLayer" unique_id=326249236]
offset_left = 52.0
offset_top = 542.0
offset_right = 115.0
offset_bottom = 563.0

[node name="Reponse2Button" type="Button" parent="DialogLayer" unique_id=628226337]
offset_left = 52.0
offset_top = 570.0
offset_right = 113.0
offset_bottom = 590.0

[node name="Reponse3Button" type="Button" parent="DialogLayer" unique_id=1217682284]
offset_left = 52.0
offset_top = 510.0
offset_right = 115.0
offset_bottom = 529.0

[node name="Reponse4Button" type="Button" parent="DialogLayer" unique_id=841656793]
offset_left = 52.0
offset_top = 477.0
offset_right = 116.0
offset_bottom = 497.0

[node name="ChoixDevinetteButton" type="Button" parent="DialogLayer" unique_id=104855458]
offset_left = 39.0
offset_top = 483.0
offset_right = 47.0
offset_bottom = 491.0

[node name="ChoixAttaquerButton" type="Button" parent="DialogLayer" unique_id=1788318186]
offset_left = 39.0
offset_top = 511.0
offset_right = 47.0
offset_bottom = 519.0

[node name="MovementJoystick" type="Control" parent="." unique_id=943095633]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -226.0
offset_right = 212.0
offset_bottom = -24.0
grow_vertical = 0
pivot_offset = Vector2(101, 101)
script = ExtResource("3_136eg")
joystick_texture = ExtResource("4_136eg")
stick_texture = ExtResource("5_oj5la")
metadata/_custom_type_script = "uid://bbt2f2m01ffn2"
